force-app/main/default/objects/Engagement_Line_Item__c/Engagement_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Service Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Line Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>