force-app/main/default/objects/Engagement_Line_Item__c/fields/Engagement_Line_Item_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Line_Item_Name_Formula__c</fullName>
    <formula>TEXT(Type__c)+&quot; &quot; +&quot;(&quot;+ Engagement__r.Name  +&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Line Item Name Formula</label>
    <type>Text</type>
</CustomField>