force-app/main/default/objects/Engagement_Line_Item__c/fields/Service_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Service_Visibility__c</fullName>
    <label>Service Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Only</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
                <default>true</default>
                <label>Client Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>